@@ -2200,18 +2200,19 @@ SEXP R_igraph_measure_dynamics_idage_st(SEXP graph, SEXP pakl,
 SEXP R_igraph_measure_dynamics_citedcat_id_age(SEXP graph, SEXP pstartvertex,
 					       SEXP pst, SEXP pcats, 
 					       SEXP pcatno, SEXP pagebins,
-					       SEXP pmaxind, SEXP psign,
+					       SEXP pmaxind, SEXP psd,
 					       SEXP pno) {
   igraph_t g;
-  igraph_array3_t adkl, sd, confint, no;
+  igraph_array3_t adkl, sd, no;
   igraph_vector_t st;
   igraph_integer_t startvertex=REAL(pstartvertex)[0];
   igraph_integer_t agebins=REAL(pagebins)[0];
   igraph_vector_t cats;
   igraph_integer_t catno=REAL(pcatno)[0];
   igraph_integer_t maxind=REAL(pmaxind)[0];
-  igraph_real_t sign=REAL(psign)[0];
   igraph_bool_t lno=LOGICAL(pno)[0];
+  igraph_bool_t lsd=LOGICAL(psd)[0];
+  igraph_array3_t *ppsd=&sd;
   SEXP result;
   
   R_igraph_before();
@@ -2221,20 +2222,23 @@ SEXP R_igraph_measure_dynamics_citedcat_id_age(SEXP graph, SEXP pstartvertex,
   R_SEXP_to_igraph(graph, &g);
   
   igraph_array3_init(&adkl, 0, 0, 0);
-  igraph_array3_init(&sd, 0, 0, 0);
-  igraph_array3_init(&confint, 0, 0, 0);
+  if (lsd) {    
+    igraph_array3_init(&sd, 0, 0, 0);
+  } else {
+    ppsd=0;
+  }
   igraph_array3_init(&no, 0, 0, 0);
-  igraph_measure_dynamics_citedcat_id_age(&g, startvertex, &adkl, &sd, 
-					  &confint, &no, &st, &cats, catno,
-					  agebins, maxind, sign, lno);
-  PROTECT(result=NEW_LIST(4));
+  igraph_measure_dynamics_citedcat_id_age(&g, startvertex, &adkl, ppsd, 
+					  &no, &st, &cats, catno,
+					  agebins, maxind, lno);
+  PROTECT(result=NEW_LIST(3));
   SET_VECTOR_ELT(result, 0, R_igraph_array3_to_SEXP(&adkl));
   igraph_array3_destroy(&adkl);
-  SET_VECTOR_ELT(result, 1, R_igraph_array3_to_SEXP(&sd));
-  igraph_array3_destroy(&sd);
-  SET_VECTOR_ELT(result, 2, R_igraph_array3_to_SEXP(&confint));
-  igraph_array3_destroy(&confint);
-  SET_VECTOR_ELT(result, 3, R_igraph_array3_to_SEXP(&no));
+  if (lsd) {
+    SET_VECTOR_ELT(result, 1, R_igraph_array3_to_SEXP(&sd));
+    igraph_array3_destroy(&sd);
+  } 
+  SET_VECTOR_ELT(result, 2, R_igraph_array3_to_SEXP(&no));
   igraph_array3_destroy(&no);
   
   R_igraph_after();
@@ -2273,7 +2277,7 @@ SEXP R_igraph_measure_dynamics_citedcat_id_age_st(SEXP graph, SEXP padkl,
 SEXP R_igraph_measure_dynamics_citingcat_id_age(SEXP graph, SEXP pstartvertex,
 						SEXP pst, SEXP pcats, 
 						SEXP pcatno, SEXP pagebins,
-						SEXP pmaxind, SEXP psign,
+						SEXP pmaxind, SEXP psd,
 						SEXP pno) {
   igraph_t g;
   igraph_array3_t adkl, sd, confint, no;
@@ -2283,8 +2287,9 @@ SEXP R_igraph_measure_dynamics_citingcat_id_age(SEXP graph, SEXP pstartvertex,
   igraph_vector_t cats;
   igraph_integer_t catno=REAL(pcatno)[0];
   igraph_integer_t maxind=REAL(pmaxind)[0];
-  igraph_real_t sign=REAL(psign)[0];
   igraph_bool_t lno=LOGICAL(pno)[0];
+  igraph_bool_t lsd=LOGICAL(psd)[0];
+  igraph_array3_t *ppsd=&sd;
   SEXP result;
   
   R_igraph_before();
@@ -2294,20 +2299,23 @@ SEXP R_igraph_measure_dynamics_citingcat_id_age(SEXP graph, SEXP pstartvertex,
   R_SEXP_to_igraph(graph, &g);
   
   igraph_array3_init(&adkl, 0, 0, 0);
-  igraph_array3_init(&sd, 0, 0, 0);
-  igraph_array3_init(&confint, 0, 0, 0);
+  if (lsd) {
+    igraph_array3_init(&sd, 0, 0, 0);
+  } else {
+    ppsd=0;
+  }
   igraph_array3_init(&no, 0, 0, 0);
-  igraph_measure_dynamics_citingcat_id_age(&g, startvertex, &adkl, &sd, 
-					  &confint, &no, &st, &cats, catno,
-					  agebins, maxind, sign, lno);
-  PROTECT(result=NEW_LIST(4));
+  igraph_measure_dynamics_citingcat_id_age(&g, startvertex, &adkl, ppsd, 
+					   &no, &st, &cats, catno,
+					   agebins, maxind, lno);
+  PROTECT(result=NEW_LIST(3));
   SET_VECTOR_ELT(result, 0, R_igraph_array3_to_SEXP(&adkl));
   igraph_array3_destroy(&adkl);
-  SET_VECTOR_ELT(result, 1, R_igraph_array3_to_SEXP(&sd));
-  igraph_array3_destroy(&sd);
-  SET_VECTOR_ELT(result, 2, R_igraph_array3_to_SEXP(&confint));
-  igraph_array3_destroy(&confint);
-  SET_VECTOR_ELT(result, 3, R_igraph_array3_to_SEXP(&no));
+  if (lsd) {
+    SET_VECTOR_ELT(result, 1, R_igraph_array3_to_SEXP(&sd));
+    igraph_array3_destroy(&sd);
+  }
+  SET_VECTOR_ELT(result, 2, R_igraph_array3_to_SEXP(&no));
   igraph_array3_destroy(&no);
   
   R_igraph_after();
